# xkeyboard-config

./: .gitlab-ci.yml  .triage-policies.yml  ChangeLog.md  RELEASING.md  meson.build  meson_options.txt
.gitlab-ci/: inet.in  triage-policies-stale.yml
.gitlab/issue_templates/: Default.md  Feature Request.md
.gitlab/merge_request_templates/: Bug Fix.md  Default.md  New Layout.md
changes/layouts/: +add-bopomofo-layout.feature.md  +add-dvorak-alt-tr-and-dvp-alt-tr.feature.md  +add-sebeolsik.feature.md  +colemak-sym-mod.feature.md  +es-dead-caron-doubleacute.breaking.md  +lontara-layout.feature.md  543.feature.md  868.feature.md  pl-colemak-dh-ortho.feature.md
changes/misc/: +implement_f19_and_f24.feature.md  +numpad-fix-shift.breaking.md  +numpad-shift.breaking.md  +remove_device_specific_mappings_from_general_purpose_keys.breaking.md  +types.bugfix.md
changes/options/: +hyper-mod2.feature.md
compat/: misc  mousekeys
geometry/: nokia
po/: ar.po  bg.po  ca.po  de.po  fi.po  fr.po  he.po  id.po  ka.po  kk.po  ko.po  pl.po  pt.po  ro.po  sl.po  sr.po  sv.po  tr.po  uk.po  xkeyboard-config.pot  zh_CN.po
rules/: 0010-lists.part  0036-layoutoption_symbols.part  0037-layout1option_symbols.part  0038-layout2option_symbols.part  0039-layout3option_symbols.part  0040-layout4option_symbols.part  0041-option_compat.part  0042-o_s.part  0043-o_c.part  0090-model_geometry.part  0101-model_symbols.part  0102-evdev.model_symbols.part  0130-modellayout_symbols.part  0160-modellayout1_symbols.part  0180-modellayout2_symbols.part  0200-modellayout3_symbols.part  0220-modellayout4_symbols.part  0350-model_types.part  __init__.py  base.extras.xml  base.xml  components.py  dev.aliases.xml  dev.legacy.xml  dev.xml  directive.py  export-rmlvo-resolutions.py  group.py  merge.py  meson.build  rules.in  test_basics.py  test_layout_pattern.py  xkb-dev-to-release.py  xkb-dev-to-release.xslt  xkb-dev.dtd  xkb.dtd
rules/compat/: map-variants.py  variantsMapping-vendors.lst
rules/from_registry/: __init__.py  __main__.py
rules/generator/: __init__.py  __main__.py  compatibility.py  options.py  parser.py  registry.py  template.py
rules/merge/: __init__.py  __main__.py
rules/to_registry/: __init__.py  __main__.py
symbols/: af  ara  br  cn  de  es  fr  ge  gr  id  il  in  inet  keypad  kpdl  kr  lt  ma  meson.build  np  pl  pointerkeys  pt  rs  ru  tr  tw  us  vn
symbols/macintosh_vndr/: gb  us
symbols/nokia_vndr/: nokiarx44  nokiarx51  nokiasu8w
symbols/sun_vndr/: ara
tests/: test_compat_rules.py  test_rules_generator.py  verify-group-names.sh
tests/xkbcommon/: __init__.py
types/: extra  numpad  pc
